eks/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: myflix
  labels:
    app: myflix
